--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-email/components": "^0.0.17",
     "bcryptjs": "^2.4.3",
+    "dotenv": "^16.4.5",
     "mongoose": "^8.3.4",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
